Add GET /systems/:systemId/fleets route to get all the fleets of a system
